--- a/Desktop/project_summer/requirements.txt
+++ b/Desktop/project_summer/requirements.txt
@@ -4,4 +4,8 @@ langchain-openai==0.0.5
 pypdf==4.0.1
 python-dotenv==1.0.0
 pydantic==2.5.0
-reportlab==4.0.7 
+reportlab==4.0.7
+pandas==2.1.4
+numpy==1.24.3
+scikit-learn==1.3.2
+joblib==1.3.2 
