--- a/Desktop/project_summer/.gitignore
+++ b/Desktop/project_summer/.gitignore
@@ -52,5 +52,6 @@ temp/
 tmp/
 
 # Future implementations and documentation
-future_implementations/
-FUTURE_WORK.md
+README_OLD.md
+models/*.pkl
+logs/
