--- a/Desktop/project_summer/requirements.txt
+++ b/Desktop/project_summer/requirements.txt
@@ -1,11 +1,22 @@
-streamlit==1.28.1
-langchain==0.1.0
-langchain-openai==0.0.5
-pypdf==4.0.1
-python-dotenv==1.0.0
-pydantic==2.5.0
-reportlab==4.0.7
-pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-joblib==1.3.2 
+# Core Streamlit and web framework
+streamlit>=1.28.0
+python-dotenv>=1.0.0
+
+# PDF processing
+pypdf>=4.0.0
+
+# Data science and ML
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+
+# AI/LangChain (optional - only needed if OpenAI API key is configured)
+langchain>=0.1.0
+langchain-openai>=0.0.5
+
+# Report generation
+reportlab>=4.0.0
+
+# Data validation and types
+pydantic>=2.5.0 
